--- a/Aula009/index.html
+++ b/Aula009/index.html
@@ -60,7 +60,24 @@
                         </div>
                     </div>
                     <div class="tab-pane fade" id="converter">
-                        teste1
+                      <div class="row">
+                        <div class="col-12">
+                            <h2>Converter de Dólar para Real</h2>
+                        </div>
+                      </div>
+                    <div class="row">
+                    <div class="col-12"><input type="text" class="form-control" id="valor-converter">
+                    </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 mt-2"><button class="btn btn-success btn-large" onclick="ConverterValor()">Converter</button></div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <h3 id="valor-final"></h3>
+                        </div>
+
+                    </div>
                     </div>
                 </div>
             </div>
